Partly done with final

--- a/03-EF-Core/final/westcoast-cars.web/appsettings.Development.json
+++ b/03-EF-Core/final/westcoast-cars.web/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=westcoastcars.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   }
 }
