--- a/03-EF-Core/final/westcoast-cars.web/westcoast-cars.web.csproj
+++ b/03-EF-Core/final/westcoast-cars.web/westcoast-cars.web.csproj
@@ -7,4 +7,13 @@
     <RootNamespace>westcoast_cars.web</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
